# defaultrefine

./: ProjectHome.md
branches/cx-morph-kit/cpp/: AUTHORS  README  autogen.sh
branches/cx-morph-kit/cpp/libg2p/: GGroups.cpp  GRule.cpp  GRule.h  Makefile.am  RNode.h  RTree.h  g2p_pattern.h  g2popt.cpp  libg2p.cpp
branches/cx-morph-kit/cpp/libutil/: StringHelper.h
branches/cx-morph-kit/cpp/msvc/vc10/WinG2PDLL/WinG2PDLL/: WinG2PDLL.vcxproj  WinG2PDLL.vcxproj.filters
branches/cx-morph-kit/cpp/nsis/: defaultrefine.nsi
branches/cx-morph-kit/cpp/src/: defaultrefine.cpp
branches/cx-morph-kit/data/afr.example/: afr.example.dict  afr.example.dict.aligned  afr.example.gnulls  afr.example.words
branches/cx-morph-kit/perl/: GNode.pm  g2p.pl  g2pAlign.pm  g2pArchive.pm  g2pDict.pm  g2pOlist.pm  g2pOpt.pl  g2pRules.pm  g2pRulesHelper.pm  g2pSound.pm  g2pVariants.pm  g2ptest.pl
branches/cx-morph-kit/perl/G2P-Core/: MANIFEST  README  SVWChar.h  typemap
branches/cx-morph-kit/perl/G2P-Core/lib/G2P/: Core.pm
branches/cx-morph-kit/perl/G2P-Core/t/data/setswana/: tn.gra
branches/cx-morph-kit/perl/test_data/: run_perl_test.sh  setswana.gmap  setswana.rules  setswana.test.recreated.perl_dict
branches/cx-morph-kit/python/: README
branches/cx-morph-kit/python/g2p/: charmap.py  g2p.py
branches/cx-morph-kit/python/test_data/setswana-dict/: LICENSE.txt  setswana.shuf.dict
cpp/: COPYING  ChangeLog  Makefile.am  autogen.sh  configure.ac  configure.in  doclean.sh  libg2p.pc.in  test.sh
cpp/libg2p/: GGroups.h  GNode.cpp  GNode.h  GRule.cpp  GRule.h  Makefile.am  RNode.h  RTree.cpp  RTree.h  g2p_pattern.cpp  g2pexports.h  g2popt.cpp  g2popt.h  libg2p.cpp  libg2p.h
cpp/libutil/: CmndArgs.cpp  CmndArgs.h  Makefile.am  StringHelper.cpp  StringHelper.h  log.c  log.h
cpp/m4/: ax_lib_log4cxx.m4
cpp/nsis/: README
cpp/src/: Makefile.am  defaultrefine.cpp
data/afr.example/: afr.example.graphs  afr.example.map  afr.example.phones  afr.example.rules
perl/: README  Timestamp.pm  defref.pl  g2p.pl  g2pAlign.pm  g2pArchive.pm  g2pDefref.pm  g2pExp.pm  g2pFiles.pm  g2pGroups.pm  g2pMain.pm  g2pOlist.pm  g2pOpt.pl  g2pShow.pm  g2pVariants.pm
perl/G2P-Core/: Changes  Core.xs  MANIFEST  Makefile  Makefile.PL  SVWChar.h  typemap
perl/G2P-Core/t/: G2P-Core.t
perl/G2P-Core/t/data/setswana/: tn.dic  tn.pat  tn.pho  tn.rul
perl/test_data/: setswana.phones  setswana.pmap  setswana.test.result  setswana.train.perl_dict  setswana.train.recreated.perl_dict
python/: README  align.py  application.py  train.py
python/g2p/: __init__.py  dictionaryfile.py  g2p.py  word.py  wordfile.py
python/test_data/setswana-dict/: setswana.shuf.3988.dict
trunk/cpp/: NEWS  README  configure.in  defaultrefine.spec  doclean.sh
trunk/cpp/libg2p/: GGroups.cpp  GGroups.h  GNode.cpp  GNode.h  GRule.cpp  GTree.cpp  GTree.h  Makefile.am  RNode.cpp  RTree.cpp  g2p_pattern.cpp  g2p_pattern.h  g2popt.h  libg2p.cpp
trunk/cpp/libutil/: CmndArgs.cpp  StringHelper.cpp  log.c  log.h
trunk/cpp/msvc/vc10/WinG2PDLL/: WinG2PDLL.sln
trunk/cpp/src/: Makefile.am  defaultrefine.cpp
trunk/data/afr.example/: afr.example.dict  afr.example.dict.aligned  afr.example.graphs  afr.example.rules
trunk/perl/: GTree.pm  defref.pl  g2p.pl  g2pAlign.pm  g2pDec.pm  g2pDefref.pm  g2pDict.pm  g2pDo.pm  g2pMain.pm  g2pOlist.pm  g2pOpt.pl  g2pRules.pm  g2pRulesHelper.pm  g2pShow.pm  g2pSound.pm  g2pTrees.pm  g2ptest.pl
trunk/perl/test_data/: setswana.summary  setswana.test.perl_dict  setswana.train.result
trunk/python/: README  g2p.py  setup.py
trunk/python/g2p/: charset.py  g2p.py  g2p_pattern.py  log.py
trunk/python/test_data/setswana-dict/: README.txt  setswana.dict  setswana.shuf.1024.dict
